@@ -5,69 +5,67 @@
 #---------------------------------------------
 # BACKGROUND AND BORDER
 #---------------------------------------------
-rounded = 5
+rounded = 10
 border_width = 1
 background_color = #ffffff 40
-border_color = #ffffff 70
+border_color = #ffffff 60
 
-rounded = 4
-border_width = 0
-background_color = #ffffff 0
-border_color = #d1d1d1 0
-
-rounded = 4
+rounded = 1
 border_width = 0
 background_color = #ffffff 30
-border_color = #d1d1d1 14
+border_color = #ffffff 15
+
+
 
 #---------------------------------------------
 # PANEL
 #---------------------------------------------
 panel_monitor = 1
-panel_position = top center
-panel_size = 1000 25
-panel_margin = 0 7
-panel_padding = 7 3 0
+panel_position = bottom center
+panel_size = 0 30
+panel_margin = 0 0
+panel_padding = 5 4
 font_shadow = 0
-panel_background_id = 1
+panel_background_id = 0
 
 #---------------------------------------------
 # TASKBAR
 #---------------------------------------------
-taskbar_mode = single_desktop
-taskbar_padding = 0 0 0
-taskbar_background_id = 0
+taskbar_mode = multi_desktop
+taskbar_padding = 8 0 0
+taskbar_background_id = 1
 
 #---------------------------------------------
 # TASKS
 #---------------------------------------------
 task_icon = 1
 task_text = 1
-task_width = 150
+task_width = 160
 task_centered = 1
 task_padding = 2 1
-task_font = myriad pro 8
-task_font_color = #000000 70
+task_font = Dejavu sans 8
+task_font_color = #000000 60
 task_active_font_color = #000000 100
-task_background_id = 2
-task_active_background_id = 3
+task_background_id = 0
+task_active_background_id = 2
 
 #---------------------------------------------
 # SYSTRAY
 #---------------------------------------------
 #systray_padding = 9 3
-#systray_background_id = 0
+#systray_icon_opacity = 50
+#systray_background_id = 1
 
 #---------------------------------------------
 # CLOCK
 #---------------------------------------------
-time1_format = %H:%M
-time1_font = sans bold 12
+time1_format = %A %d %H:%M
+time1_font = Dejavu sans 10
 #time2_format = %A %d %B
-#time2_font = sans bold 10
-clock_font_color = #000000 70
-clock_padding = 4 0
-clock_background_id = 0
+time2_font = sans 7
+clock_font_color = #000000 80
+clock_padding = 8 0
+clock_background_id = 1
 
 #---------------------------------------------
 # MOUSE ACTION ON TASK
